# SimpleRustAPI

./: .gitignore  Cargo.toml
src/: main.rs  test.rs
